# wavicle

./: ATTRIBUTION.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROVENANCE.md  README.md
.github/workflows/: ci.yml
design_docs/: 2026-07-15_wavpack_codec_plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: bitstream.rs  block.rs  decode.rs  decorr.rs  encode.rs  entropy.rs  error.rs  float.rs  format.rs  lib.rs  metadata.rs
tests/: conformance.rs
tests/fixtures/: f32_mono.decoded.raw  f32_mono.ss.txt  f32_mono.wv  f32_specials_mono.decoded.raw  f32_specials_mono.ss.txt  f32_specials_mono.wv  f32_stereo.decoded.raw  f32_stereo.ss.txt  f32_stereo.wv  false_stereo.decoded.raw  false_stereo.ss.txt  false_stereo.wv  gen.py  hybrid_lossy_int16_stereo.ss.txt  hybrid_lossy_int16_stereo.wv  int16_mono.decoded.raw  int16_mono.ss.txt  int16_mono.wv  int16_stereo.decoded.raw  int16_stereo.ss.txt  int16_stereo.wv  int24_stereo.decoded.raw  int24_stereo.ss.txt  int24_stereo.wv  int32_shifted_mono.decoded.raw  int32_shifted_mono.ss.txt  int32_shifted_mono.wv  int32_stereo.decoded.raw  int32_stereo.ss.txt  int32_stereo.wv  measure.py  multiblock_int16_mono.decoded.raw  multiblock_int16_mono.ss.txt  multiblock_int16_mono.wv  silence_stereo.ss.txt  silence_stereo.wv
