# cargo-fuzz harness for wavicle. Its own workspace so `cargo test` in the main
# crate never pulls in libfuzzer-sys (nightly + sanitizer). Run with:
#   cargo +nightly fuzz run decode
[package]
name = "wavicle-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.wavicle]
path = ".."
features = ["encode"]

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false
